[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/ui/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/audio/sfx/dice_throw_00.mp3" type="AudioStream" id=3]

[node name="OptionsMenu" type="VBoxContainer"]
margin_right = 200.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="LanguageOptionButton" type="OptionButton" parent="."]
margin_right = 200.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
clip_text = true

[node name="FullscreenButton" type="CheckBox" parent="."]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
text = "FULL_SCREEN"

[node name="DyslexicButton" type="CheckBox" parent="."]
margin_top = 68.0
margin_right = 200.0
margin_bottom = 98.0
mouse_default_cursor_shape = 2
text = "DYSLEXIA_FONT"

[node name="SmoothCameraLabel" type="Label" parent="."]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 132.0
text = "CAMERA_SMOOTHNESS"
align = 1

[node name="SmoothCameraSlider" type="HSlider" parent="."]
margin_top = 136.0
margin_right = 200.0
margin_bottom = 152.0
rect_min_size = Vector2( 140, 0 )
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.1
value = 0.6

[node name="AudioLabel" type="Label" parent="."]
margin_top = 156.0
margin_right = 200.0
margin_bottom = 186.0
text = "AUDIO"
align = 1

[node name="AudioSlider" type="HSlider" parent="."]
margin_top = 190.0
margin_right = 200.0
margin_bottom = 206.0
rect_min_size = Vector2( 140, 0 )
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MusicLabel" type="Label" parent="."]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 240.0
text = "MUSIC"
align = 1

[node name="MusicSlider" type="HSlider" parent="."]
margin_top = 244.0
margin_right = 200.0
margin_bottom = 260.0
rect_min_size = Vector2( 140, 0 )
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.1

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
